# Oneiromantia

./: .claudeignore  .env.example  CLAUDE.md  ChromeDevToolsConsoleError.md  Oneiromantia_codebase.ipynb  README.md
apps/api/: agents-cli-manifest.yaml  main.py  pyproject.toml
apps/api/art_generator/: __init__.py  agent.py
apps/api/mcp/: dream_server.py
apps/api/orchestrator/: __init__.py  agent.py  eval_set_1.evalset.json
apps/api/orchestrator/.adk/: session.db
apps/api/pattern_analyst/: __init__.py  agent.py
apps/api/symbol_extractor/: __init__.py  agent.py
apps/web/: .env.example  DESIGN_SYSTEM.md  README.md  metadata.json  package-lock.json  package.json  tsconfig.tsbuildinfo  wrangler.jsonc
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/analyze/: route.ts
apps/web/components/: GenerativeVisualizer.tsx
apps/web/components/views/: AIInsightsView.tsx  AgentConsoleView.tsx  ArchetypeExplorerView.tsx  DashboardView.tsx  DreamGalleryView.tsx  EmotionalTimelineView.tsx  JournalView.tsx  PatternNetworkView.tsx  SettingsView.tsx  SymbolLibraryView.tsx
apps/web/hooks/: use-dreams.tsx
docs/: Product_Requirements_Document.md  UI-Notes.md
scripts/: oneiro_adk_skeleton.py  oneiro_art_spec.py  oneiromantia_art_spec.py
