[project]
name = "oneiro"
version = "0.1.0"
description = "A multi-agent system that ingests dream logs, extracts recurring symbols and emotional arcs, and generates procedural art visualizations from them."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.3.0",
]
