[project]
name = "oneiro"
version = "0.1.0"
description = "A multi-agent system that ingests dream logs, extracts recurring symbols and emotional arcs, and generates procedural art visualizations from them."
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.3.0",
    "mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "symbol_extractor",
    "pattern_analyst",
    "art_generator",
    "orchestrator",
    "dream_journal_mcp",
]

[tool.hatch.build.targets.wheel.force-include]
"../../packages/prompts/oneiro_art_spec.py" = "oneiro_art_spec.py"
