[project]
name = "oneiromantia"
version = "0.3.0"
description = "A multi-agent system that ingests dream logs, extracts recurring symbols and emotional arcs, and generates procedural art visualizations from them."
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.3.0",
    "litellm>=1.85.7",
    "mcp",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "symbol_extractor",
    "pattern_analyst",
    "art_generator",
    "orchestrator",
    "dream_journal_mcp",
]

[tool.hatch.build.targets.wheel.force-include]
"../../packages/prompts/oneiromantia_art_spec.py" = "oneiromantia_art_spec.py"

